2007-07-10  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartFactory.java
	(createPieChart(String, PieDataset, boolean, boolean, Locale)): New method,
	(createPieChart(String, PieDataset, PieDataset, int, boolean, boolean, 
	    boolean, Locale, boolean, boolean)) : Likewise,
	(createRingChart(String, PieDataset, boolean, boolean, Locale)): Likewise,
	(createPieChart3D(String, PieDataset, boolean, boolean, Locale)): Likewise,
	* source/org/jfree/chart/labels/StandardPieSectionLabelGenerator.java
	(StandardPieSectionLabelGenerator(Locale)): New constructor,
	(StandardPieSectionLabelGenerator(String labelFormat, Locale)): Likewise,
	* source/org/jfree/chart/labels/StandardPieToolTipGenerator.java
	(StandardPieToolTipGenerator): Delegate,
	(StandardPieToolTipGenerator(Locale)): New constructor,
	(StandardPieToolTipGenerator(String)): Delegate,
	(StandardPieToolTipGenerator(String labelFormat, Locale)): New constructor.
	
2007-07-10  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/statistics/SimpleHistogramDataset.java
	(SimpleHistogramDataset): Check for null argument.

2007-07-10  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(getRangeAxisIndex): New method.

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/BarRenderer.java
	(BarRenderer): Changed default value for drawBarOutline,
	* source/org/jfree/chart/renderer/category/IntervalBarRenderer.java
	(drawInterval): Respect drawBarOutline setting,
	* source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
	(errorIndicatorStroke): New field,
	(StatisticalBarRenderer): Initialise new field,
	(getErrorIndicatorStroke): New method,
	(setErrorIndicatorStroke): Likewise,
	(drawHorizontalItem): Respect drawBarOutline setting, and set appropriate 
	stroke,
	(drawVerticalItem): Likewise,