@@ -1,3 +1,10 @@
+2007-07-11  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/renderer/category/StatisticalBarRenderer.java
+	(errorIndicatorStroke): Marked transient,
+	(writeObject): Handle errorIndicatorStroke,
+	(readObject): Likewise.
+
 2007-07-10  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/ChartFactory.java
